      Users can just load and unload MPMs like other modules, enable the worker
      MPM by default
  * Changes in a2enmod:
    + Parse "Conflicts: " header to denote conflicts between modules which
      cannot be loaded into the same Apache server.
  * The following modules and associated configuration files were removed:
    + mod_authz_default and mod_authn_default: Please use a proper authentication module instead
    + mod_mem_cache: Use mod_cache_disk instead

 -- Arno Töll <debian@toell.net>  Thu, 09 Feb 2012 22:42:05 +0100

apache2 (2.2.22-1) unstable; urgency=low

   [ Stefan Fritsch ]
   * New upstream release, urgency medium due to security fixes:
     - Fix CVE-2012-0021: mod_log_config: DoS with '%{cookiename}C' log format
     - Fix CVE-2012-0031: Unprivileged child process could cause the parent to
       crash at shutdown
     - Fix CVE-2012-0053: Exposure of "httpOnly" cookies in code 400 error
       message.
   * Move httxt2dbm to apache2-utils
   * Adjust debian/control to point to new git repository.
 
   [ Arno Töll ]
   * Fix "typo in /etc/apache2/apache2.conf" (Closes: #653801)

 -- Stefan Fritsch <sf@debian.org>  Wed, 01 Feb 2012 21:49:04 +0100 

apache2 (2.2.21-5) unstable; urgency=low

  [ Arno Töll ]
  * Fix build failures introduced as regregression by the previous build. Debian
    buildds aren't rebuilding arch:all packages which caused problems for our
    unconditional copying into binary package. I was warned.

 -- Stefan Fritsch <sf@debian.org>  Thu, 29 Dec 2011 17:36:41 +0100

apache2 (2.2.21-4) unstable; urgency=low

  [ Stefan Fritsch ]

  * Security: Fix broken patch for CVE-2011-3607 (Integer overflow in
    ap_pregsub).
  * Optimize debian/rules again to improve build time by doing most work in a
    single parallelized "build-%" target.

  [ Arno Töll ]

  * Fix "Suggest removing DefaultType from apache2.conf" change the DefaultType
    from text/plain to None. This lets the browser guess a proper MIME type