@@ -1,1 +1,2 @@
+# Depends: dbd, authz_core
 LoadModule authz_dbd_module /usr/lib/apache2/modules/mod_authz_dbd.so
