@@ -1,1 +1,2 @@
+# Depends cache
 LoadModule cache_disk_module /usr/lib/apache2/modules/mod_cache_disk.so
