@@ -1,1 +1,2 @@
+# Depends: session
 LoadModule session_dbd_module /usr/lib/apache2/modules/mod_session_dbd.so
