@@ -1,1 +1,0 @@
-LoadModule reqtimeout_module /usr/lib/apache2/modules/mod_reqtimeout.so
